# colloquium

./: .npmrc  CHANGELOG.md  README.md  design.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  release.yml
public/: sysaudio-worklet.js
scripts/: cleanup-old-identifier-macos.sh  fetch-animated-emoji.sh  fix-macos-permissions.sh  sign-dev.sh
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0006_room_membership_v2.sql  0007_read_state.sql  0010_friend_requests_dedup.sql  0011_avatars.sql  0012_message_reactions.sql  0013_message_read_receipts.sql  0014_room_mute_state.sql
src-tauri/src/: db.rs  identity.rs  keychain.rs  lib.rs  main.rs  sysaudio.rs  tray.rs  watchparty.rs
src/assets/emoji-animated/: NOTICE.md
src/components/call/: CallControlBar.tsx  CallOverlay.tsx  FloatingCallWindow.tsx  RoomCallView.tsx  RoomCallWindow.tsx  ScreenQualityBadge.tsx  ScreenShareButton.tsx  VideoTile.tsx
src/components/chat/: ChatView.tsx  Composer.tsx  DropZone.tsx  EmojiPicker.tsx  MarkdownRenderer.tsx  MentionAutocomplete.tsx  MessageList.tsx
src/components/invite/: HomeView.tsx  InboxView.tsx
src/components/layout/: MainShell.tsx  Sidebar.tsx
src/components/onboarding/: WelcomeScreen.tsx
src/components/room/: AddMembersModal.tsx  CreateGroupModal.tsx  GroupRoomView.tsx  RoomMembersModal.tsx
src/components/search/: SearchModal.tsx
src/components/settings/: SettingsModal.tsx
src/components/ui/: Avatar.tsx  Badge.tsx  Button.tsx  EmptyState.tsx  ErrorBoundary.tsx  IconButton.tsx  Modal.tsx  Skeleton.tsx  Switch.tsx  Toaster.tsx  Tooltip.tsx
src/components/watchparty/: WatchPartyWindow.tsx
src/hooks/: useDraggable.ts  useFocusTrap.ts  useGlobalShortcuts.ts  useRingtone.ts
src/lib/: animatedEmoji.test.ts  animatedEmoji.ts  base64.ts  crypto.ts  cx.ts  hlc.ts  mediaTracks.ts  mentions.test.ts  mentions.ts  time.ts
src/services/: badge.ts  notify.ts  sound.ts  window.ts
src/services/avatar/: avatarService.ts
src/services/bridge/: networkBridge.ts
src/services/call/: PeerConnectionWrapper.ts  PresenterSlotManager.test.ts  PresenterSlotManager.ts  RoomCallPresenceTracker.test.ts  RoomCallPresenceTracker.ts  callDebug.ts  callEvents.ts  callService.ts  callToastBridge.ts  displayMedia.ts  micAudio.ts  noiseSuppressor.ts  roomCallService.ts  screenShareConfig.ts  systemAudio.ts  tuneOpusSdp.test.ts
src/services/db/: avatarRepo.ts  client.ts  fileRepo.ts  friendRequestsRepo.ts  identityRepo.ts  messageRepo.ts  muteRepo.ts  pendingInvitesRepo.ts  reactionRepo.ts  readStateRepo.ts  roomMembersRepo.ts  roomRepo.ts  rosterRepo.ts  settingsRepo.ts
src/services/peer/: Outbox.test.ts  Outbox.ts  PeerRegistry.ts  derivePeerId.ts  iceServers.ts  registry.ts
src/services/room/: chatService.ts  roomService.ts
src/services/roster/: friendRequestService.ts  rosterService.ts
src/services/watchparty/: watchPartyPlayer.ts  watchPartyService.ts  watchPartySync.test.ts  watchPartySync.ts
src/stores/: useAvatarStore.ts  useCallStore.ts  useChatStore.ts  useFriendRequestStore.ts  useIdentityStore.ts  useRoomCallStore.ts  useRoomStore.ts  useRosterStore.ts  useSettingsStore.ts  useToastStore.ts  useWatchPartyStore.ts
src/styles/: globals.css
src/types/: domain.ts  wire.ts
