[package]
name = "colloquium"
version = "0.1.0"
description = "Colloquium — peer-to-peer chat and voice/video"
authors = ["Colloquium"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "colloquium_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-window-state = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"

# macOS system-audio capture (ScreenCaptureKit). WKWebView can't capture
# display audio via getDisplayMedia, so we tap it natively and inject it into
# the WebRTC stream. excludesCurrentProcessAudio keeps the app's own output
# (i.e. the call itself) out of the capture, preventing feedback.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-screen-capture-kit = "0.3"
objc2-core-audio-types = "0.3"
objc2-core-foundation = "0.3"
dispatch2 = "0.3"
block2 = "0.6"
objc2-core-media = { version = "0.3", features = [
    "CMBase",
    "CMSampleBuffer",
    "CMBlockBuffer",
    "CMFormatDescription",
    "objc2-core-audio-types",
] }

# Windows system-audio capture (WASAPI process loopback). getDisplayMedia on
# Windows taps a whole-system loopback that recaptures the call's own output
# and echoes it back; instead we capture natively in EXCLUDE-target-process-tree
# mode so Colloquium's own audio is left out.
[target.'cfg(target_os = "windows")'.dependencies]
windows-core = "0.58"
windows = { version = "0.58", features = [
    "implement",
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Threading",
] }

